# rust-solid_todo

./: Cargo.toml  docker-compose.yml  readme.md
fe/: package.json  tsconfig.json  vite.config.ts
fe/src/: env.d.ts  root.tsx
fe/src/components/: Grid.tsx  Logo.tsx  toasts.tsx
fe/src/components/Layout/: index.tsx
fe/src/data/: auth.ts  index.ts
fe/src/routes/: auth.tsx  index.tsx  logout.tsx
fe/src/routes/[...404]/: index.tsx
fe/src/routes/dashboard/: index.tsx
fe/src/state/: auth.ts  storage.ts
migrations/: 2_user.sql  3_todos.sql  4_todos_user.sql  5_fixing_fuckup.sql
src/: config.rs  main.rs
src/http/: mod.rs
src/http/auth/: dto.rs  handlers.rs  mod.rs
src/http/error/: mod.rs
src/http/helpers/: pagination.rs
src/http/jwt/: mod.rs
src/http/todo/: dto.rs  handlers.rs  mod.rs
src/http/upload/: mod.rs
src/http/user/: dto.rs  handlers.rs  mod.rs
