[package]
name = "todo_squeel2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.15", features = ["headers"]}
chrono = {version = "0.4.24", features=["serde"]}
dotenvy = "0.15.7"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "uuid",
] }
tower = "0.4.13"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = {version = "0.4.0", features=["full"]}
bcrypt = "0.14.0"
headers = "0.3.8"
jsonwebtoken = "8.3.0"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features=["env-filter"]}
validator = {version = "0.16.0", features=["derive"]}
uuid = {version = "1.3.1", features = ["serde", "v4"]}
anyhow = "1.0.70"
axum-macros = "0.3.7"
